resolve the security issues

--- a/package.json
+++ b/package.json
@@ -47,8 +47,10 @@
         ]
     },
     "resolutions": {
+        "ansi-html": "https://registry.yarnpkg.com/ansi-html-community/-/ansi-html-community-0.0.8.tgz#69fbc4d6ccbe383f9736934ae34c3f8290f1bf41",
         "browserslist": "^4.16.6",
         "glob-parent": "^5.1.2",
+        "immer": "^9.0.6",
         "tar": "^6.1.1",
         "trim-newlines": "^4.0.1"
     },
